// file: proto/gcommon/v1/common/list_api_keys_response.proto
// version: 1.0.0
// guid: 1c9b335d-ac56-4d22-aced-e1e6722e9247

edition = "2023";

package common.v1;

import "common/v1/api_key.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/common/";

message ListApiKeysResponse {
  // List of API keys
  repeated common.v1.APIKey api_keys = 1 [(buf.validate.field).repeated.min_items = 1];

  // Next page token
  string next_page_token = 2 [(buf.validate.field).string.min_len = 1];

  // Total count
  int32 total_count = 3 [(buf.validate.field).int32.gte = 0];
}
