// file: proto/gcommon/v1/common/types/send_verification_email_response.proto
// version: 1.0.0
// guid: f17880d2-6f37-4b9d-a6d6-06c70e75e7d6
// file: proto/gcommon/v1/common/send_verification_email_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package common.v1;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/common/";

message SendVerificationEmailResponse {
  // Send success
  bool sent = 1;

  // Error message if send failed
  string error_message = 2 [(buf.validate.field).string.min_len = 1];

  // Token expiry time
  int64 expires_at = 3 [(buf.validate.field).int64.gte = 0];
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
