// file: proto/gcommon/v2/common/types/revoke_role_response.proto
// version: 1.0.0
// guid: acfab4c3-a30b-45ba-9590-745f492f55bd
// file: proto/gcommon/v2/common/revoke_role_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package common.v2;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb/v2";

message RevokeRoleResponse {
  // Revocation success
  bool success = 1;

  // Error message if revocation failed
  string error_message = 2 [(buf.validate.field).string.min_len = 1];

  // Remaining permissions after revocation
  repeated string remaining_permissions = 3 [(buf.validate.field).repeated.min_items = 1];
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
