// file: pkg/auth/proto/requests/create_permission_request.proto
// file: auth/proto/requests/create_permission_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message CreatePermissionRequest {
  // Permission name
  string name = 1;

  // Permission description
  string description = 2;

  // Actions this permission grants
  repeated string actions = 3;

  // Resources this permission applies to
  repeated string resources = 4;
}
