// file: pkg/auth/proto/requests/delete_permission_request.proto
// file: auth/proto/requests/delete_permission_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message DeletePermissionRequest {
  // Permission ID to delete
  string permission_id = 1;

  // Force deletion even if assigned
  bool force = 2;
}

