// file: pkg/auth/proto/requests/disable_2fa_request.proto
// file: auth/proto/requests/disable_2fa_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message Disable2FaRequest {
  // User ID requesting 2FA disable
  string user_id = 1;

  // Current password for verification
  string password = 2;

  // 2FA code for verification
  string verification_code = 3;
}

