// file: pkg/auth/proto/requests/enable_2fa_request.proto
// file: auth/proto/requests/enable_2fa_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message Enable2FaRequest {
  // User ID requesting 2FA enablement
  string user_id = 1;

  // Phone number for SMS-based 2FA
  string phone_number = 2;

  // Whether to use authenticator app
  bool use_authenticator = 3;

  // Backup codes preference
  bool generate_backup_codes = 4;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
