// file: auth/proto/responses/enable_mfa_response.proto
// version: 1.0.0
// guid: 7fe3c97f-1a88-419f-b2f9-9f699a13b78c

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";

import "auth/proto/mfa_setup_instruction.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";


message EnableMfaResponse {
  // Success status
  bool success = 1;

  // Setup instructions for each method
  repeated MfaSetupInstruction setup_instructions = 2;

  // Error message if operation failed
  string error_message = 3;
}
