// file: pkg/auth/proto/requests/list_api_keys_request.proto
// file: auth/proto/requests/list_api_keys_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message ListApiKeysRequest {
  // User ID to list API keys for
  string user_id = 1;

  // Include expired keys
  bool include_expired = 2;

  // Pagination
  int32 page_size = 3;
  string page_token = 4;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
