// file: pkg/auth/proto/responses/revoke_api_key_response.proto
// file: auth/proto/responses/revoke_api_key_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message RevokeApiKeyResponse {
  // Revocation success
  bool success = 1;

  // Error message if revocation failed
  string error_message = 2;

  // Revocation timestamp
  int64 revoked_at = 3;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
