// file: pkg/auth/proto/requests/send_verification_email_request.proto
// file: auth/proto/requests/send_verification_email_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message SendVerificationEmailRequest {
  // User ID or email address
  string identifier = 1;

  // Template to use for email
  string template = 2;

  // Additional context data
  map<string, string> context = 3;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
