// file: pkg/auth/proto/requests/verify_email_request.proto
// file: auth/proto/requests/verify_email_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message VerifyEmailRequest {
  // User ID or email to verify
  string identifier = 1;

  // Verification token from email
  string verification_token = 2;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
