// file: pkg/auth/proto/requests/verify_mfa_request.proto
// file: auth/proto/requests/verify_mfa_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";
import "pkg/auth/proto/mfa_method.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message VerifyMfaRequest {
  // User ID
  string user_id = 1;

  // MFA verification code
  string code = 2;

  // Method being verified
  MfaMethod method = 3;

  // Context for the verification (login, transaction, etc.)
  string context = 4;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
