// file: proto/gcommon/v1/common/types/enable_mfa_request.proto
// version: 1.0.0
// guid: 1277fc9b-bcd3-49c3-9c5d-2596a743c594
// file: proto/gcommon/v1/common/enable_mfa_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/mfa_method.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

message EnableMfaRequest {
  // User ID requesting MFA enablement
  string user_id = 1;

  // MFA methods to enable
  repeated gcommon.v1.common.MfaMethod methods = 2;

  // Primary contact method
  string primary_contact = 3;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
