// file: proto/gcommon/v1/common/types/disable_mfa_request.proto
// file: proto/gcommon/v1/common/types/disable_mfa_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/enums/mfa_method.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/common/messages";

message DisableMfaRequest {
  // User ID requesting MFA disable
  string user_id = 1;

  // Current password for verification
  string password = 2;

  // MFA verification code
  string verification_code = 3;

  // Specific methods to disable (empty = all)
  repeated MfaMethod methods = 4;
}
