// file: proto/gcommon/v1/common/types/disable_mfa_response.proto
// file: proto/gcommon/v1/common/types/disable_mfa_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/mfa_method.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.common.types";

message DisableMfaResponse {
  // Success status
  bool success = 1;

  // Methods that were disabled
  repeated MfaMethod disabled_methods = 2;

  // Error message if operation failed
  string error_message = 3;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
