// file: proto/gcommon/v1/common/messages/resend_verification_request.proto
// version: 1.0.0
// guid: 59477f5d-a132-4166-97a0-58e8a4534c3e

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/enums/verification_type.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/common";

message ResendVerificationRequest {
  // User ID or email address
  string identifier = 1;

  // Verification type

  AuthVerificationType type = 2;
}
