// file: proto/gcommon/v1/common/messages/security_context.proto
// version: 1.0.0
// guid: 80402f15-2486-4290-92b0-77a7f38f1820

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/enums/auth_method.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

message SecurityContext {
  // User ID
  string user_id = 1;

  // Session ID
  string session_id = 2;

  // User roles
  repeated string roles = 3;

  // User permissions
  repeated string permissions = 4;

  // Authentication method used
  gcommon.v1.common.AuthAuthMethod auth_method = 5;

  // MFA verified
  bool mfa_verified = 6;

  // IP address
  string ip_address = 7;

  // User agent
  string user_agent = 8;

  // Authentication timestamp
  int64 auth_timestamp = 9;

  // Context metadata
  map<string, string> metadata = 10;
}
