// file: proto/gcommon/v1/common/messages/token_metadata.proto
// version: 1.0.0
// guid: 038ee237-f0cb-43e1-95c5-5869754a969d

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/enums/token_type.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

message TokenMetadata {
  // Token ID
  string token_id = 1;

  // Token type
  gcommon.v1.common.TokenType type = 2;

  // Subject (user ID)
  string subject = 3;

  // Audience
  repeated string audience = 4;

  // Scopes
  repeated string scopes = 5;

  // Issued at timestamp
  int64 issued_at = 6;

  // Expires at timestamp
  int64 expires_at = 7;

  // Not before timestamp
  int64 not_before = 8;

  // Issuer
  string issuer = 9;
}
