// file: proto/gcommon/v1/common/messages/verify2_fa_request.proto
// version: 1.0.0
// guid: fa64bc16-24a7-4b50-ba76-fc8fdd7079de

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/enums/two_fa_type.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/gcommon/v1/common/messages";

message Verify2FaRequest {
  // User ID
  string user_id = 1;

  // 2FA verification code
  string code = 2;

  // Type of 2FA being verified

  AuthTwoFaType type = 3;
}
