// file: proto/gcommon/v1/common/types/verify_mfa_response.proto
// version: 1.0.0
// guid: 352b7b8d-1237-45ac-89b7-63228d94c5d0
// file: proto/gcommon/v1/common/messages/verify_mfa_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/gcommon/v1/common/messages";

message VerifyMfaResponse {
  // Verification success
  bool verified = 1;

  // Error message if verification failed
  string error_message = 2;

  // Remaining attempts (for rate limiting)
  int32 remaining_attempts = 3;

  // Session token if successful
  string session_token = 4;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
