// file: proto/gcommon/v1/common/types/get_api_key_request.proto
// file: proto/gcommon/v1/common/types/get_api_key_request.proto
//
// Request definitions for auth module

//
edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.common.types";

message GetApiKeyRequest {
  // API key ID
  string key_id = 1;

  // Include usage statistics
  bool include_stats = 2;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
