// file: proto/gcommon/v1/common/types/list_permissions_response.proto
// file: proto/gcommon/v1/common/types/list_permissions_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/permission.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.common.types";

message ListPermissionsResponse {
  // List of permissions
  repeated Permission permissions = 1;

  // Next page token
  string next_page_token = 2;

  // Total count
  int32 total_count = 3;
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
