// file: proto/gcommon/v1/common/types/revoke_permission_request.proto
// version: 1.0.0
// guid: 08a90c9d-4730-427a-b445-35cbadc141a6

edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/enums/subject_type.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.common.types";

message RevokePermissionRequest {
  // Subject ID (user or role)
  string subject_id = 1;

  // Subject type
  enum AuthSubjectType {
    SUBJECT_TYPE_UNSPECIFIED = 0;
    SUBJECT_TYPE_USER = 1;
    SUBJECT_TYPE_ROLE = 2;
  }
  AuthSubjectType subject_type = 2;

  // Permission ID to revoke
  string permission_id = 3;
}
