// file: proto/gcommon/v1/common/types/verify_email_response.proto
// version: 1.0.0
// guid: 93319a70-2b96-4a96-8bfd-c8412437d883
// file: proto/gcommon/v1/common/verify_email_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

message VerifyEmailResponse {
  // Verification success
  bool verified = 1;

  // Error message if verification failed
  string error_message = 2;

  // User ID that was verified
  string user_id = 3 [
      (buf.validate.field).string.pattern = "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
      (buf.validate.field).required = true
    ];
}

// Implement the actual protobuf definitions according to the auth module requirements
// This file needs proper implementation
